# M5stopwatch-vibecoding

./: .gitignore  README.md
docs/: FEATURES.md  PET_CUSTOMIZATION.md  POWER_SAVING.md  QUOTA.md  SECURITY_AND_PRIVACY.md
firmware-stopwatch-idf/: partitions.csv  sdkconfig.defaults
firmware-stopwatch-idf/components/BMI270_BMM150_Sensor/: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
firmware-stopwatch-idf/components/BMI270_BMM150_Sensor/include/: bmi270_bmm150.h
firmware-stopwatch-idf/components/BMI270_BMM150_Sensor/src/: bmi270_bmm150.c
firmware-stopwatch-idf/components/M5GFX/: CMakeLists.txt
firmware-stopwatch-idf/components/M5IOE1/: CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
firmware-stopwatch-idf/components/M5IOE1/src/: M5IOE1.cpp  M5IOE1.h  M5IOE1_i2c_compat.h
firmware-stopwatch-idf/components/M5PM1/src/: M5PM1_i2c_compat.h
firmware-stopwatch-idf/components/lvgl/env_support/cmake/: esp.cmake
firmware-stopwatch-idf/components/mooncake_log/: .clang-format  CMakeLists.txt  README.md  library.json
firmware-stopwatch-idf/components/mooncake_log/cmake/: basic.cmake  esp_idf.cmake
firmware-stopwatch-idf/components/mooncake_log/src/: mooncake_log.cpp  mooncake_log.h  mooncake_log_signal.h
firmware-stopwatch-idf/main/: CMakeLists.txt  main.cpp
firmware-stopwatch-idf/main/apps/: apps.h
firmware-stopwatch-idf/main/apps/app_codex/: app_codex.cpp  app_codex.h  codex_config.h  codex_quota_client.cpp  codex_quota_client.h
firmware-stopwatch-idf/main/apps/app_codex/view/: view.cpp  view.h
firmware-stopwatch-idf/main/apps/app_imu/: app_imu.cpp  app_imu.h
firmware-stopwatch-idf/main/apps/app_imu/view/: view.cpp
firmware-stopwatch-idf/main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
firmware-stopwatch-idf/main/apps/app_maze/: app_maze.cpp  app_maze.h
firmware-stopwatch-idf/main/apps/app_maze/view/: view.cpp  view.h
firmware-stopwatch-idf/main/apps/app_setup/: app_setup.cpp
firmware-stopwatch-idf/main/apps/app_setup/workers/: about.cpp  datetime.cpp  device.cpp  wifi.cpp  workers.h
firmware-stopwatch-idf/main/apps/app_stopwatch/view/: view.cpp
firmware-stopwatch-idf/main/apps/common/audio/: audio.cpp
firmware-stopwatch-idf/main/apps/common/status_bar/: status_bar.cpp  status_bar.h
firmware-stopwatch-idf/main/assets/: assets.h
firmware-stopwatch-idf/main/assets/images/: codex_pet_blink0.c  codex_pet_blink1.c  codex_pet_idle.c  codex_pet_idle0.c  codex_pet_idle1.c  codex_pet_idle2.c  codex_pet_idle3.c  codex_pet_idle4.c  codex_pet_idle5.c  codex_pet_msg_error_0.c  codex_pet_msg_error_1.c  codex_pet_msg_error_2.c  codex_pet_msg_idle_0.c  codex_pet_msg_idle_1.c  codex_pet_msg_idle_2.c  codex_pet_msg_key_0.c  codex_pet_msg_key_1.c  codex_pet_msg_key_2.c  codex_pet_msg_processing.c  codex_pet_msg_processing_0.c  codex_pet_msg_processing_1.c  codex_pet_msg_processing_2.c  codex_pet_msg_processing_3.c  codex_pet_msg_ready.c  codex_pet_msg_shake.c  codex_pet_msg_shake_0.c  codex_pet_msg_shake_1.c  codex_pet_msg_shake_2.c  codex_pet_msg_shake_3.c  codex_pet_msg_touch.c  codex_pet_msg_touch_0.c  codex_pet_msg_touch_1.c  codex_pet_msg_touch_2.c  codex_pet_msg_touch_3.c  codex_pet_processing0.c  codex_pet_processing1.c  codex_pet_processing2.c  codex_pet_processing3.c  codex_pet_touch0.c  codex_pet_touch1.c  (+7 more)
firmware-stopwatch-idf/main/hal/: ble_bridge.cpp  ble_bridge.h  hal.cpp  hal.h  hal_audio.cpp  hal_bluetooth.cpp  hal_button.cpp  hal_display.cpp  hal_pmic.cpp  hal_rtc.cpp
firmware-stopwatch-idf/tools/: generate_codex_message_assets.swift  generate_codex_pet_assets.swift
tools/typeless_bridge/: README.md  build_stopwatch_ble_bridge.sh  create_local_codesign_identity.sh  generate_bridge_icon.swift  install_launch_agent.sh  package_release.sh  run_stopwatch_ble_bridge.sh  stopwatch_ble_bridge.swift  typeless_ax_probe.swift  typeless_probe.py  uninstall_launch_agent.sh
(+4 files in other folders)
